<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2023-2033 WanSen AI Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.wansenai.eairp</groupId>
        <artifactId>core</artifactId>
        <version>2.0.4-SNAPSHOT</version>
    </parent>

    <artifactId>service</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.wansenai.eairp</groupId>
            <artifactId>middleware</artifactId>
            <version>2.0.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.wansenai.eairp</groupId>
            <artifactId>dao</artifactId>
            <version>2.0.4-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.wansenai.eairp</groupId>
            <artifactId>utils</artifactId>
            <version>2.0.4-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.wansenai.eairp</groupId>
            <artifactId>plugins</artifactId>
            <version>2.0.4-SNAPSHOT</version>
        </dependency>
    </dependencies>

</project>